--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
 	"description": "Displays vault statistics like note count and allows toggling display in the status bar.",
 	"author": "Alessandro Chitarrini",
 	"authorUrl": "https://github.com/chitvs",
-	"fundingUrl": "https://github.com/chitvs/vault-stats",
+	"fundingUrl": "https://github.com/chitvs/vaulter",
 	"isDesktopOnly": true
   }  
