--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,51 @@
-# vscode
-.vscode 
+# Node.js dependencies
+# Ignore the 'node_modules' directory which contains installed packages
+node_modules/
 
-# Intellij
-*.iml
-.idea
+# Build output
+# Ignore build artifacts or distribution folders (e.g., dist or build directories)
+dist/
+build/
 
-# npm
-node_modules
+# Obsidian specific files
+# Ignore Obsidian plugin data files and other internal files
+data.json
+versions.js
 
-# Don't include the compiled main.js file in the repo.
-# They should be uploaded to GitHub releases instead.
+# Ignore compiled JavaScript files (generated from TypeScript)
 main.js
-
-# Exclude sourcemaps
 *.map
 
-# obsidian
-data.json
+# IDE and Editor specific files
+# VSCode and IntelliJ IDEA settings should not be tracked
+.vscode/
+.idea/
 
-# Exclude macOS Finder (System Explorer) View States
+# macOS system files
+# Ignore system-specific files created by macOS, like Finder settings
 .DS_Store
+
+# npm config file (if not needed)
+# Ignore if you're not using custom npm settings
+.npmrc
+
+# TypeScript build files
+# Ignore TypeScript configuration and build-related files
+tsconfig.json
+*.d.ts
+
+# Ignore other common temporary or environment files
+*.log
+*.swp
+*.swo
+*.bak
+
+# Ignore any custom config files (optional)
+# Use if your plugin has any config file specific to your setup
+*.config.js
+*.config.json
+
+# Optional: Ignore package lock or yarn lock files if not using them for versioning
+# If you're not relying on package-lock.json or yarn.lock, uncomment below
+# package-lock.json
+# yarn.lock
