--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "vaulter",
+	"version": "1.0.1",
+	"description": "A plugin that shows the total number of notes in the status bar of Obsidian.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": ["obsidian", "plugin", "vault stats", "note count"],
+	"author": "Alessandro Chitarrini",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
